# ruth-ai-vas-ms-v2

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_ISSUES_AND_FIXES.md  PHASE7_I1_STARTUP_NOTES.md  PHASE7_I2_VALIDATION_REPORT.md  PHASE7_I3_VALIDATION_REPORT.md  PHASE7_I3_VALIDATION_REPORT_v2.md  PHASE7_I4_VALIDATION_REPORT.md  PHASE7_I5_VALIDATION_REPORT.md  PHASE7_I6_VALIDATION_REPORT.md  PHASE_1_MVP_COMPLETE.md  PPE_DETECTION_BOUNDING_BOX_FIX.md  PPE_DETECTION_COMPLETE_FIX.md  PPE_DETECTION_GPU_CONFIGURATION.md  RUTHAI_UNIFIED_RUNTIME_SPECIFICATION.md  WEIGHTS.md  docker-compose.yml  test_inference_debug.py  test_tank_detection.py  test_tank_image.py  test_yolo_direct.py  test_yolo_direct2.py
ruth-ai-backend/: .env.example  ANALYTICS_DEPLOYMENT_CHECKLIST.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  Dockerfile  README.md  alembic.ini  pyproject.toml  run_migrations.sh  sync_devices.py  test_payload.json
ruth-ai-backend/alembic/: __init__.py  env.py
ruth-ai-backend/alembic/versions/: 2026_01_13_0001_001_initial_schema.py  2026_01_18_0002_add_ppe_event_types.py  2026_01_18_0003_add_model_config.py  2026_01_19_add_zone_intrusion_type.py
ruth-ai-backend/app/: __init__.py  main.py
ruth-ai-backend/app/api/: __init__.py
ruth-ai-backend/app/api/internal/: __init__.py  ai_runtime.py  events.py
ruth-ai-backend/app/api/v1/: __init__.py  ai.py  analytics.py  bookmark_analyses.py  chat.py  devices.py  events.py  hardware.py  health.py  models.py  violations.py
ruth-ai-backend/app/core/: __init__.py  cache.py  config.py  database.py  errors.py  lifespan.py  logging.py  metrics.py  middleware.py  redis.py
ruth-ai-backend/app/integrations/: __init__.py
ruth-ai-backend/app/integrations/ai_runtime/: __init__.py  client.py  exceptions.py  (+1 more)
ruth-ai-backend/app/models/: __init__.py  base.py  bookmark_analysis.py  device.py  enums.py  event.py  evidence.py  stream_session.py  violation.py
ruth-ai-backend/app/schemas/: __init__.py  analytics.py  bookmark_analysis.py  chat.py  device.py  error.py  event.py  evidence.py  hardware.py  health.py  inference.py  models.py  violation.py
ruth-ai-backend/app/services/: __init__.py  bookmark_analysis_service.py  bookmark_analysis_worker.py  device_service.py  event_ingestion_service.py  evidence_service.py  exceptions.py  export_service.py  hardware_service.py  health_service.py  inference_loop.py  model_availability.py  stream_service.py  vas_event_consumer.py  violation_service.py
ruth-ai-backend/docs/: DEPLOYMENT_READINESS_CHECKLIST.md
ruth-ai-backend/migrations/: env.py
ruth-ai-backend/migrations/versions/: 2026_01_18_0002_add_ppe_event_types.py  2026_01_19_add_zone_intrusion_type.py  2026_02_01_add_bookmark_analyses.py
ruth-ai-backend/tests/: analytics-api-test-report.md
ruth-ai-backend/tests/integration/: __init__.py  conftest.py  test_devices_api.py  test_error_flows.py  test_events_api.py  test_evidence_api.py  test_streams_api.py  test_violations_api.py
ruth-ai-backend/tests/unit/: __init__.py  conftest.py  test_error_mapping.py
ruth-ai-nlp-chat/: Dockerfile  README.md  pyproject.toml
ruth-ai-nlp-chat/app/: __init__.py  main.py
ruth-ai-nlp-chat/app/api/: __init__.py  chat.py  health.py
ruth-ai-nlp-chat/app/core/: __init__.py  config.py  database.py  sql_validator.py
ruth-ai-nlp-chat/app/integrations/: __init__.py
ruth-ai-nlp-chat/app/schemas/: __init__.py  chat.py
ruth-ai-nlp-chat/app/services/: __init__.py  chat_service.py
(+422 files in other folders)
